@@ -3,9 +3,9 @@ ld.so.1 #PACKAGE# #MINVER#
 libc.so.0.3 #PACKAGE# #MINVER#
 #include "symbols.wildcards"
  (symver|optional)HURD_CTHREADS_0.3 2.11
- (symver|optional)GLIBC_2.13_DEBIAN_19 2.13-19~
- (symver|optional)GLIBC_2.13_DEBIAN_31 2.13-31~
- (symver|optional)GLIBC_2.13_DEBIAN_33 2.13-33~
+ (symver|optional)GLIBC_2.13.DEBIAN_19 2.13-19~
+ (symver|optional)GLIBC_2.13.DEBIAN_31 2.13-31~
+ (symver|optional)GLIBC_2.13.DEBIAN_33 2.13-33~
 libBrokenLocale.so.1 #PACKAGE# #MINVER#
 #include "symbols.wildcards"
 libSegFault.so #PACKAGE# #MINVER#
@@ -1099,6 +1099,6 @@ libmachuser.so.1 #PACKAGE# #MINVER#
  vm_write@Base 2.11
 libpthread.so.0.3 #PACKAGE# #MINVER#
 #include "symbols.wildcards"
- *@GLIBC_2.13_DEBIAN_38 2.13-38~
- *@GLIBC_2.13_DEBIAN_39 2.13-39~
+ *@GLIBC_2.13.DEBIAN_38 2.13-38~
+ *@GLIBC_2.13.DEBIAN_39 2.13-39~
  *@GLIBC_2.2.6 2.13-38~
