@@ -5,7 +5,7 @@ This dates when libpthread was moved to glibc and some features were added.
 @@ -1,5 +1,5 @@
  libc {
 -  GLIBC_2.13 {
-+  GLIBC_2.13_DEBIAN_31 {
++  GLIBC_2.13.DEBIAN_31 {
      pthread_attr_destroy; pthread_attr_getdetachstate;
      pthread_attr_getinheritsched; pthread_attr_getschedparam;
      pthread_attr_getschedpolicy; pthread_attr_getscope; pthread_attr_init;
@@ -14,10 +14,10 @@ This dates when libpthread was moved to glibc and some features were added.
      _pthread_spin_lock;
    }
 -  GLIBC_2.17 {
-+  GLIBC_2.13_DEBIAN_38 {
++  GLIBC_2.13.DEBIAN_38 {
      pthread_hurd_cond_wait_np;
 +  }
-+  GLIBC_2.13_DEBIAN_39 {
++  GLIBC_2.13.DEBIAN_39 {
      pthread_hurd_cond_timedwait_np;
    }
  }
