@@ -14,7 +14,7 @@ Index: glibc-2.21/hurd/Versions
      # functions used in macros & inline functions
      __errno_location;
    }
-+  GLIBC_2.13_DEBIAN_19 {
++  GLIBC_2.13.DEBIAN_19 {
 +    # functions used by libpthread and <hurd/signal.h>
 +    _hurd_sigstate_set_global_rcv;
 +    _hurd_sigstate_lock;
