@@ -36,7 +36,7 @@ Index: glibc-2.21/hurd/Versions
      _hurd_sigstate_unlock;
      _hurd_sigstate_delete;
    }
-+  GLIBC_2.13_DEBIAN_33 {
++  GLIBC_2.13.DEBIAN_33 {
 +    # "quasi-internal" functions
 +    _hurd_exec_file_name;
 +  }
