@@ -30,6 +30,10 @@ glibc (2.21-0experimental1) UNRELEASED; urgency=medium
   * patches/hurd-i386/unsubmitted-libc_alloca_cutoff.diff: New patch,
     implements alloca cutoff limit.
   * sysdeps/hurd.mk: Disable -Werror since MIG currently generates warnings.
+  * libc0.3.symbols.hurd-i386: Update to new version engine.
+  * patches/hurd-i386/{libpthread_version,
+    local-hurdsig-global-dispositions-version,submitted-exec_filename}.diff:
+    Update to new version engine.
 
  -- Samuel Thibault <sthibault@debian.org>  Fri, 20 Mar 2015 12:30:54 +0000
 
